--- a/src/sassStyles/_global.scss
+++ b/src/sassStyles/_global.scss
@@ -1,3 +1,12 @@
+/* Global*/
+@import './_reset.scss';
+@import './_animations.scss';
+@import './_functions.scss';
+@import './_mixins.scss';
+@import './_variables.scss';
+@import './_typography.scss';
+
+
 body {
     margin: 0;
     padding: 0;
