--- a/src/sassStyles/_global.scss
+++ b/src/sassStyles/_global.scss
@@ -12,13 +12,6 @@ body {
     padding: 0;
 }
 
-.app {
-    font-family: sans-serif;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-
-}
 
 /*------------------------------------*\
     Main site structure
@@ -93,6 +86,59 @@ body {
         }
     }
 }
+
+/*------------------------------------*\
+    Grid Items
+\*------------------------------------*/
+
+.grid-area {
+    &__item {
+        @include flex-row;
+        max-height: 65rem;
+        &:nth-of-type(even) {
+            flex-direction: row-reverse;
+        }
+    }
+    &__item {
+        &:nth-of-type(even) .grid-area__content {
+            background-color: $color-secondary;
+            & h1, & h2, & p {
+                color: $color-primary;
+            }
+            & h2 {
+                width: 80%;
+            }
+        }
+    }
+    &__content {
+        width: 42%;
+        background-color: $color-secondary;
+        padding: 0 11.1rem;
+        @include flex-column;
+        justify-content: center;
+        &:nth-of-type(odd) {
+            background-color: $color-primary;
+        }
+        & h1, & h2, & p {
+            color: $color-secondary;
+        }
+        & h2 {
+            text-transform: uppercase;
+            font-size: 4rem;
+            letter-spacing: 0.41rem;
+            margin-bottom: 2.1rem;
+        }
+    }
+    &__media {
+        width: 58%;
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+}
+
 
 
 
