--- a/src/sassStyles/_global.scss
+++ b/src/sassStyles/_global.scss
@@ -52,6 +52,18 @@ body {
     }
     &-two {
         color: $color-primary;
+        position: relative;
+        &:after {
+            content: url("/assets/shared/desktop/arrow.svg");
+            position: absolute;
+            right: -6rem;
+            top: 0;
+            bottom: 0;
+            margin: auto;
+        }
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
@@ -98,13 +110,22 @@ body {
         &:nth-of-type(even) {
             flex-direction: row-reverse;
         }
+        &:first-child .grid-area__content {
+            background-color: $color-primary;
+            & h1, & h2, & p {
+                color: $color-secondary;
+            }
+            & .button-two {
+                color: $color-secondary;
+                &:after {
+                    filter: invert(1)
+                }
+            }
+        }
     }
     &__item {
         &:nth-of-type(even) .grid-area__content {
             background-color: $color-secondary;
-            & h1, & h2, & p {
-                color: $color-primary;
-            }
             & h2 {
                 width: 80%;
             }
@@ -116,17 +137,17 @@ body {
         padding: 0 11.1rem;
         @include flex-column;
         justify-content: center;
-        &:nth-of-type(odd) {
-            background-color: $color-primary;
-        }
         & h1, & h2, & p {
-            color: $color-secondary;
+            color: $color-primary;
         }
         & h2 {
             text-transform: uppercase;
             font-size: 4rem;
             letter-spacing: 0.41rem;
             margin-bottom: 2.1rem;
+        }
+        & p {
+            margin-bottom: 4.8rem;
         }
     }
     &__media {
