--- a/src/sassStyles/_global.scss
+++ b/src/sassStyles/_global.scss
@@ -5,13 +5,14 @@
 @import './_mixins.scss';
 @import './_variables.scss';
 @import './_typography.scss';
+@import './_header.scss';
+@import './_footer.scss';
 
 
 body {
     margin: 0;
     padding: 0;
 }
-
 
 /*------------------------------------*\
     Main site structure
@@ -63,38 +64,6 @@ body {
         }
         &:hover {
             text-decoration: underline;
-        }
-    }
-}
-
-/*------------------------------------*\
-    Header
-\*------------------------------------*/
-
-.header {
-    & .l-container {
-        padding: 1.6rem 2rem;
-        align-items: center;
-    }
-    &-nav {
-        @include flex-row;
-        justify-content: space-between;
-        gap: 3.7rem;
-    }
-    &-link {
-        color: $color-primary;
-        font-family: $primary-font-family;
-        font-weight: $font-bold;
-        font-size: 1.2rem;
-        line-height: 1.6rem;
-        letter-spacing: 2px;
-        text-decoration: none;
-        text-transform: uppercase;
-        &:hover {
-            color: $color-tertiary;
-        }
-        &__active {
-            color: $color-tertiary;
         }
     }
 }
@@ -529,35 +498,5 @@ table {
     td {
         padding: 2.4rem 0;
         border-bottom: 1px solid hsl(0, 0, 88%);
-    }
-}
-
-
-
-/*------------------------------------*\
-    Footer
-\*------------------------------------*/
-
-.footer {
-    background-color: #000;
-    text-align: center;
-    margin-top: auto;
-    padding: 6.4rem 0;
-    &-column {
-        @include flex-column;
-        justify-content: space-between;
-        gap: 8.5rem;
-        align-items: flex-start;
-    }
-    &-social {
-        @include flex-row;
-        gap: 13px;
-        & img {
-            filter: sepia(100%) grayscale(100%) brightness(20);
-            width: 100%;
-            &:hover {
-                filter: none;
-            }
-        }
     }
 }
